@@ -99,11 +99,12 @@ using FileStatuses = Files::FileStatuses;
 Q_DECLARE_OPERATORS_FOR_FLAGS(Files::FileStatuses)
 
 struct FileValues {
-    FileValues(FileStatus fileStatus = FileStatus::New) : status(fileStatus) {}
+    FileValues() {}
+    FileValues(FileStatus fileStatus) : status(fileStatus) {}
     FileValues(FileStatus fileStatus, qint64 fileSize) : status(fileStatus), size(fileSize) {}
 
-    FileStatus status;
-    qint64 size = 0; // file size in bytes
+    FileStatus status = FileStatus::NotSet;
+    qint64 size = -1; // file size in bytes
     QString checksum; // newly computed or imported from the database
     QString reChecksum; // the recomputed checksum, if it does not match the 'checksum'
 }; // struct FileValues
