@@ -1,14 +1,17 @@
 Veretino 0.5.0
 What's new:
-* Now files without read permissions can be immediately excluded from the list (customizable).
+* Now files without read permissions can be excluded when creating the list (customizable).
 * Added the ability to export individual checksums from the database to a digest file (*.sha1/256/512).
+
+Fixes and Minor Enhancements:
+* Fixed display of item's zero-byte size.
 
 Internal changes:
 * Redesigned task management system.
 * Significant optimization of the Data Model creation process (x10 faster for Large lists).
 
 Removed:
-* Setting the display of the number of updated items in the menu. Now always on.
+* Setting of menu to display the number of updatable items. Now always on.
 
 ---
 Veretino 0.4.5
